Rename class definition cop to reflect fixed behaviour
Since the cop is now fixed to warn against class in namespaces, update
the cop name accordingly.

--- a/config/default.yml
+++ b/config/default.yml
@@ -4,8 +4,8 @@ Rake:
     - 'Rakefile'
     - '**/*.rake'
 
-Rake/ClassDefinitionInTask:
-  Description: 'Do not define a class or module in rake task, because it will be defined to the top level.'
+Rake/ClassDefinitionInNamespace:
+  Description: 'Do not define a class or module in a rake namespace, because it will be defined to the top level.'
   Enabled: true
   VersionAdded: '0.3.0'
 
